feat: add named hasOne relation (#549)

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "tempest/reflection",
+    "description": "A component for reflection.",
     "license": "MIT",
     "minimum-stability": "dev",
     "require": {
